argo-rollout-canary/canary-manifests/set-weight/example1-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-setweight
spec:
  replicas: 5
  strategy:
    canary:
      steps:
        - setWeight: 20 #20% of traffic is sent to canary and 80% to old version
        - pause: {} #waits for manual promotion
        - setWeight: 40
        - pause: {duration: 10s}
        - setWeight: 60
        - pause: {duration: 20s}
        - setWeight: 80
        - pause: {duration: 1m}
  selector:
    matchLabels:
      app: rollouts-setweight
  template:
    metadata:
      labels:
        app: rollouts-setweight
    spec:
      containers:
        - name: rollouts-setweight
          image: ahmedevops/blue-green # This is the same image that we built in the previous session (v12-argo-rollouts-blue-green) , I just re-tagged it
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-setweight
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: rollouts-setweight
