argo-rollout-canary/canary-manifests/set-weight/example1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rolling-update
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollouts-setweight
                port:
                  number: 5000
